@@ -8,7 +8,8 @@ Changes
 - None
 
 Bug Fixes
-- None
+- Fix all types of arrows being restocked with the upgrade.
+- Fix ghost slot not taking in the *exact* item.
 ------------------------------------------------------
 Version 1.10.2 - 2.2.3
 ------------------------------------------------------
